Revision history for Perl extension Perl::Critic::Policy::TryTiny::RequireBlockTermination.

{{$NEXT}}

0.01 2016-06-20

 - First version.
