@@ -1,5 +1,31 @@
-/Perl-Critic-Policy-TryTiny-RequireBlockTermination*
-/.build
+/.build/
+/_build/
+/Build
+/Build.bat
+/blib
+/Makefile
+/pm_to_blib
+
+/carton.lock
+/.carton/
+/local/
+
+nytprof.out
+nytprof/
+
+cover_db/
+
+*.bak
+*.old
+*~
 *.swp
-/nytprof*
-/cover_db
+*.o
+*.obj
+
+!LICENSE
+
+/_build_params
+
+MYMETA.*
+
+/Perl-Critic-Policy-TryTiny-RequireBlockTermination-*
