@@ -1,35 +1,9 @@
 language: perl
 sudo: false
 perl:
-    - "blead"
-    - "5.24"
-    - "5.22"
-    - "5.20"
-    - "5.18"
-    - "5.16"
-    - "5.14"
-    - "5.12"
-    - "5.10"
-    - "5.8"
-
-matrix:
-    allow_failures:
-        - perl: "blead"
-
-before_install:
-    - git clone git://github.com/haarg/perl-travis-helper
-    - source perl-travis-helper/init
-    - build-perl
-    - perl -V
-
-install:
-    - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=c HARNESS_TIMER=1
-    - cpanm --quiet --notest Devel::Cover::Report::Coveralls
-    - cpanm --quiet --notest --installdeps .
-
-script:
-    - PERL5OPT=-MDevel::Cover=-coverage,statement,branch,condition,path,subroutine prove -lrsv t
-    - cover
-
-after_success:
-    - cover -report coveralls
+  - "5.10"
+  - "5.12"
+  - "5.14"
+  - "5.18"
+  - "5.26"
+  - "5.28"
