@@ -1,5 +1,7 @@
 package Perl::Critic::Policy::TryTiny::RequireBlockTermination;
 
+$Perl::Critic::Policy::TryTiny::RequireBlockTermination::VERSION = '0.01';
+
 use strict;
 use warnings;
 
